--- a/new/web_framework/admin/index.html
+++ b/new/web_framework/admin/index.html
@@ -317,6 +317,7 @@
         LAST UPDATED: 2025-08-17 CST • ADMIN: Item creation and management console
     </footer>
 
+    <script src="../assets/js/data-manager.js"></script>
     <script src="admin-console.js"></script>
 </body>
 </html>
