--- a/new/web_framework/game/dashboard.html
+++ b/new/web_framework/game/dashboard.html
@@ -482,6 +482,7 @@
     </footer>
 
     <!-- Load page-specific components -->
+    <script src="../assets/js/data-manager.js"></script>
     <script src="../assets/js/main.js"></script>
     <script src="../assets/js/tooltips.js"></script>
     <script src="../assets/js/inventory.js"></script>
