--- a/new/web_framework/skills.html
+++ b/new/web_framework/skills.html
@@ -373,6 +373,7 @@
             }
         };
     </script>
+    <script src="assets/js/data-manager.js"></script>
     <script src="assets/js/skills.js?v=21"></script>
     <script>
         // Initialize skills directly
