--- a/new/web_framework/inventory.html
+++ b/new/web_framework/inventory.html
@@ -219,6 +219,7 @@
             }
         };
     </script>
+    <script src="assets/js/data-manager.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/tooltips.js"></script>
     <script src="assets/js/inventory.js"></script>
